--- a/app/src/main/res/layout/meal_row.xml
+++ b/app/src/main/res/layout/meal_row.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        android:text="Slepačí vývar"
+        android:text="@string/sampleMealName"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toTopOf="@+id/size"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/size"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="500ml"
+        android:text="@string/sampleMealSize"
         app:layout_constraintBottom_toTopOf="@+id/price"
         app:layout_constraintStart_toEndOf="@+id/sizeHeading"
         app:layout_constraintTop_toBottomOf="@+id/meal" />
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:text="10"
+        android:text="@string/sampleMealPrice"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/priceHeading"
         app:layout_constraintTop_toBottomOf="@+id/size" />
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Zobraziť \nprílohy"
+        android:text="@string/showAddons"
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Porcia: "
+        android:text="@string/mealSizeHeading"
         app:layout_constraintBottom_toTopOf="@+id/priceHeading"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="8dp"
-        android:text="Cena: "
+        android:text="@string/mealPriceHeading"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/price"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
         android:id="@+id/mena"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="€"
+        android:text="@string/currency"
         app:layout_constraintStart_toEndOf="@+id/price"
         app:layout_constraintTop_toBottomOf="@+id/size" />
 </android.support.constraint.ConstraintLayout>
